[metadata]
name = evm_booking
version = 0.0.1
description = EVM smart contract for ERC20 backed time slot booking
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://holbrook.no/src/erc20_vend/log.html
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.8
packages = 
	evm_booking
	evm_booking.unittest
	evm_booking.data

#[options.entry_points]
#console_scripts =
